# ALSA-Audio-Show-Signal-Wave

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/app/app_window/: application.cpp  application.h  main_dialog.cpp  main_dialog.h
src/app/app_window/sfml_widget/: sfml.widget.cpp  sfml_widget.h
src/app/app_window/sfml_widget/draw/: openGL_draw.h
src/app/app_window/sfml_widget/draw/src_draw/: index.cpp
src/app/librosa/: audio.h  define.h  librosa.h  util.h
src/app/reader_wav/: reader.cpp  reader_note.cpp  reader_random.cpp  reader_sample.cpp  reader_wav.h  reader_wav_getter.cpp
src/resources/: main_application.glade  main_application.glade~  main_dialog.glade  main_dialog.glade~
